apps/desktop/src-tauri/check.txt
    Checking app v0.1.5 (F:\Projects\fg-manager\apps\desktop\src-tauri)
error[E0432]: unresolved import `tauri::tray::MouseState`
  --> src\lib.rs:20:32
   |
20 | use tauri::tray::{MouseButton, MouseState, TrayIconBuilder, TrayIconEvent};
   |                                ^^^^^^^^^^ no `MouseState` in `tray`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `app` (lib) due to 1 previous error
